feature(KB-147): add ArtistMapper to art service functionality, remove setFieldsToDto method, modify step of catologue number